[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jetline"
version = "2020.1"
description = "Application framework for ETL processing."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Katsuya Iwayama", email = "iwayamak@matsubabreak.com" }
]
dependencies = [
  "requests>=2.32,<3",
  "boto3>=1.34,<2",
  "jinja2>=3.1,<4",
  "psycopg2-binary>=2.9,<3",
  "python-dateutil>=2.8.2,<3",
  "PyYAML>=6,<7",
  "paramiko>=3.4,<4",
  "scp>=0.15,<1",
  "retry==0.9.2",
]

[project.scripts]
jetline = "jetline.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["jetline*"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "D"]
ignore = ["D203", "D213", "D415"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
follow_imports = "skip"
files = [
  "jetline/cli.py",
  "jetline/parser/kicker_args_parser.py",
  "jetline/runtime/execution_context.py",
  "jetline/share_parameter/share_parameter.py",
]
